added title and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       margin: 0 auto;
     }
   </style>
-  <title>React App</title>
+  <title>Dúchas Photographic Collection</title>
 </head>
 
 <body>
